--- a/register.html
+++ b/register.html
@@ -60,7 +60,7 @@
           </button>
           <a
             class="inline-block align-baseline font-bold text-sm text-blue-600 hover:text-blue-800"
-            href="index.php"
+            href="index.html"
           >
             Already have an account?
           </a>
